Fix z-index on nav menu

--- a/src/layout/header/style.css
+++ b/src/layout/header/style.css
@@ -1,3 +1,4 @@
+.pds-nav-menu,
 .pds-navbar__mobile {
   z-index: 99;
 }
